# elementals

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: basic.frag  basic.vert  light.frag  lit.frag
src/: Input.cpp  Input.h  Scene.cpp  Scene.h  Window.cpp  Window.h  World.cpp  World.h  common.h  main.cpp  utils.h
src/camera/: Camera.cpp  Camera.h  FreeLookCameraController.h
src/core/: Camera.cpp  Camera.h  FreeLookCameraController.cpp  FreeLookCameraController.h  Input.cpp  Input.h  Window.cpp
src/graphics/: Shader.cpp  Shader.h  ShaderStage.cpp  Texture2D.cpp  Texture2D.h
src/opengl/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderStage.cpp  ShaderStage.h  Texture2D.cpp  Texture2D.h
src/render/: RenderObject.h
src/renderer/: Mesh.cpp  RenderObject.h
src/rendering/: Lights.h  RenderContext.h  RenderObject.h  Renderer.cpp  Renderer.h  Transform.h
src/rendering/mesh/: Mesh.h  MeshData.h  MeshRenderObject.h  MeshRenderer.cpp  MeshRenderer.h  Vertex.h
src/rendering/mesh/materials/: BasicMaterial.cpp  BasicMaterial.h  LitMaterial.cpp  LitMaterial.h  Material.h
src/rendering/mesh/primitives/: PrimitiveMeshes.cpp  PrimitiveMeshes.h
src/resources/: ResourceManager.cpp  ResourceManager.h
src/resources/mesh/: MeshData.h  PrimitiveMeshes.cpp  PrimitiveMeshes.h
